# roleMe

./: .gitignore  README.md  pyproject.toml
bundle/: SKILL.template.md  skill.yaml
bundle/references/: usage.md
docs/: local-development.md  product-module-boundary.md  skill-architecture.md  workflow-memory-extraction.md
docs/superpowers/plans/: 2026-04-13-roleme-hermes-compatible-refactor.md  2026-04-13-roleme-skill-implementation-plan.md  2026-04-15-roleme-natural-language-archive-implementation-plan.md  2026-04-15-roleme-workflow-archive-implementation-plan.md  2026-04-16-roleme-intent-workflow-routing-implementation-plan.md  2026-04-16-roleme-packaged-workflows-index-implementation-plan.md  (+4 more)
scripts/: build_skill.py  upgrade_role.py  validate_role.py
skill/: SKILL.md
skill/references/: usage.md
skills/roleme/: SKILL.md
templates/: AGENT.md  interview-planner-system.md
templates/brain/: index.md
templates/memory/: MEMORY.md  USER.md
templates/persona/: communication-style.md
templates/projects/: index.md
templates/self-model/: communication-style.md  decision-rules.md  disclosure-layers.md  thinking.md
tests/: conftest.py  test_bootstrap.py  test_context_router.py  test_file_ops.py  test_graph_index.py  test_internal_skills.py  test_memory.py  test_memory_lifecycle.py  test_portable_imports.py  test_repo_scripts.py  test_role_ops.py  test_session_summary.py  test_workflow_index.py
tests/integration/: test_role_roundtrip.py
tools/: context_router.py  file_ops.py  graph_index.py  memory.py  role_ops.py  workflow_index.py
(+29 files in other folders)
